--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 5월 3일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 5월 3일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
 <div class="article-link-date">
 2020년 5월 1일 수정</div>
@@ -180,20 +194,6 @@
 2020년 4월 30일 수정</div>
 </div>
 </div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
 </div>
 <div class="summary-container">
 <h1>❏ LOG의 최신 글</h1>
@@ -201,7 +201,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/log/2020-05.html">2020년 5월의 로그</a></h2>
 <div class="article-link-date">
-2020년 5월 2일 수정</div>
+2020년 5월 3일 수정</div>
 </div>
 </div>
 <div class="article-link">
