--- a/note/index.html
+++ b/note/index.html
@@ -65,6 +65,13 @@
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/dart.html">Dart</a></h2>
+<div class="article-link-date">
+2020년 5월 3일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 5월 3일 수정</div>
