update with 8 changes

--- a/note/apple.html
+++ b/note/apple.html
@@ -70,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbb64c10">맥</a></li>
-<li><a href="#org84f6e83">아이폰</a></li>
-<li><a href="#orgcff7cd7">아이패드 및 기타</a></li>
-<li><a href="#orgbb26c53">소프트웨어</a></li>
-<li><a href="#org422cdb1">세계 최고의 시가총액을 가진 회사</a></li>
+<li><a href="#org9c0bc57">맥</a></li>
+<li><a href="#orgb5799f6">아이폰</a></li>
+<li><a href="#org0e51567">아이패드 및 기타</a></li>
+<li><a href="#org2ce842d">소프트웨어</a></li>
+<li><a href="#org164c25c">세계 최고의 시가총액을 가진 회사</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +88,9 @@
 아래는 개인적인 관점으로 애플을 설명하기에 좋을 듯한 주제로 분류한 내용이다.
 </p>
 
-<div id="outline-container-orgbb64c10" class="outline-2">
-<h2 id="orgbb64c10">맥</h2>
-<div class="outline-text-2" id="text-orgbb64c10">
+<div id="outline-container-org9c0bc57" class="outline-2">
+<h2 id="org9c0bc57">맥</h2>
+<div class="outline-text-2" id="text-org9c0bc57">
 <p>
 맥(Mac) 혹은 매킨토시(Machintosh)는 애플에서 개발한 개인용 데스크톱 PC의 이름이다.
 현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac), 맥프로(Mac Pro) 등 다양한 타입의 PC 제품을 출시하고 있다.
@@ -98,9 +98,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org84f6e83" class="outline-2">
-<h2 id="org84f6e83">아이폰</h2>
-<div class="outline-text-2" id="text-org84f6e83">
+<div id="outline-container-orgb5799f6" class="outline-2">
+<h2 id="orgb5799f6">아이폰</h2>
+<div class="outline-text-2" id="text-orgb5799f6">
 <p>
 아이폰(iPhone)은 전 세계에 스마트폰을 대중화 시킨 가장 큰 주역이고
 애플이 현재처럼 성장할 수 있게 한 가장 큰 주역이기도 하다.
@@ -108,9 +108,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgcff7cd7" class="outline-2">
-<h2 id="orgcff7cd7">아이패드 및 기타</h2>
-<div class="outline-text-2" id="text-orgcff7cd7">
+<div id="outline-container-org0e51567" class="outline-2">
+<h2 id="org0e51567">아이패드 및 기타</h2>
+<div class="outline-text-2" id="text-org0e51567">
 <p>
 맥과 아이폰 이후로 가장 유명한 제품이 있다면 태블릿 디바이스인 아이패드(iPad)가 있다.
 초기에는 화면만 큰 아이폰 취급을 받기도 했지만
@@ -128,9 +128,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgbb26c53" class="outline-2">
-<h2 id="orgbb26c53">소프트웨어</h2>
-<div class="outline-text-2" id="text-orgbb26c53">
+<div id="outline-container-org2ce842d" class="outline-2">
+<h2 id="org2ce842d">소프트웨어</h2>
+<div class="outline-text-2" id="text-org2ce842d">
 <p>
 <a href="macos.html">macOS</a>를 더불어 iOS 와 같은 유명한 OS(Operating System) 소프트웨어를 개발하기도 했지만,
 iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 영향을 끼친 소프트웨어를 개발하기도 했다.
@@ -138,9 +138,9 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 </p>
 </div>
 </div>
-<div id="outline-container-org422cdb1" class="outline-2">
-<h2 id="org422cdb1">세계 최고의 시가총액을 가진 회사</h2>
-<div class="outline-text-2" id="text-org422cdb1">
+<div id="outline-container-org164c25c" class="outline-2">
+<h2 id="org164c25c">세계 최고의 시가총액을 가진 회사</h2>
+<div class="outline-text-2" id="text-org164c25c">
 <p>
 관점에 따라서는 애플을 설명하는 가장 좋은 말 일지도 모른다.
 물론 항상 그런 것은 아니지만, 2011년 시가총액 톱을 차지한 이후 계속 높은 자리를 차지하고 있다.
@@ -160,6 +160,13 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 5월 4일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
@@ -191,13 +198,6 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
 2020년 4월 30일 수정</div>
 </div>
