--- a/note/flutter.html
+++ b/note/flutter.html
@@ -65,22 +65,22 @@
 <section class="content">
 <header>
 <h1>Flutter</h1>
-<div class="title-date">2020년 4월 30일 수정</div>
+<div class="title-date">2020년 5월 4일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga24b355">문제 해결</a>
+<li><a href="#orgeff964f">문제 해결</a>
 <ul>
-<li><a href="#org13c58f7">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orgfc337f2">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org1f7e9de">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orge0f1812">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 <p>
-Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
+Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 iOS, Android 등
 다양한 플랫폼 용 앱을 만들기 위한 UI 툴킷 겸 프레임워크다.
 </p>
 
@@ -89,13 +89,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orga24b355" class="outline-2">
-<h2 id="orga24b355">문제 해결</h2>
-<div class="outline-text-2" id="text-orga24b355">
+<div id="outline-container-orgeff964f" class="outline-2">
+<h2 id="orgeff964f">문제 해결</h2>
+<div class="outline-text-2" id="text-orgeff964f">
 </div>
-<div id="outline-container-org13c58f7" class="outline-3">
-<h3 id="org13c58f7">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org13c58f7">
+<div id="outline-container-org1f7e9de" class="outline-3">
+<h3 id="org1f7e9de">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org1f7e9de">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -128,9 +128,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orgfc337f2" class="outline-3">
-<h3 id="orgfc337f2">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orgfc337f2">
+<div id="outline-container-orge0f1812" class="outline-3">
+<h3 id="orge0f1812">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orge0f1812">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
