--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 5월 4일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 5월 4일 수정</div>
@@ -192,13 +199,6 @@
 <h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
 <div class="article-link-date">
 2020년 5월 1일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
-<div class="article-link-date">
-2020년 4월 30일 수정</div>
 </div>
 </div>
 </div>
